#1036 Remove the need to use unsafe-inline CSP

--- a/Magento_Bundle/templates/catalog/product/view/price.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/price.phtml
@@ -178,6 +178,7 @@ $displayTax = $productPriceViewModel->displayPriceIncludingTax();
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <div x-data="initPrice<?= (int)$product->getId() ?>()"
      x-bind="eventListeners"
      class="price-box price-final_price my-4"
