--- a/Magento_Bundle/templates/catalog/product/view/summary.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/summary.phtml
@@ -87,6 +87,7 @@ $product = $block->getProduct();
                 }
             }
         </script>
+        <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
     </div>
 </div>
 <?php endif; ?>
