--- a/Magento_Catalog/templates/product/list/js/compare.phtml
+++ b/Magento_Catalog/templates/product/list/js/compare.phtml
@@ -49,4 +49,5 @@ $compareViewModel = $viewModels->require(ProductCompare::class);
         };
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php endif; ?>
