--- a/Magento_Catalog/templates/product/list/js/wishlist.phtml
+++ b/Magento_Catalog/templates/product/list/js/wishlist.phtml
@@ -69,4 +69,5 @@ $wishlistViewModel = $viewModels->require(Wishlist::class);
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php endif; ?>
