--- a/Magento_Catalog/templates/product/list/toolbar.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar.phtml
@@ -81,6 +81,7 @@ $additionalOptions = ['page' => 'p'];
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php if ($block->getCollection()->getSize()): ?>
     <div x-data="initToolbar<?= /** @noEscape */ $uniqueId ?>()"
          class="toolbar toolbar-products grid grid-cols-4 sm:grid-cols-8 md:grid-cols-4
