--- a/Magento_Catalog/templates/product/slider/product-slider-container.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider-container.phtml
@@ -137,6 +137,7 @@ $slideItemClasses = $block->getData('maybe_purged_tailwind_slide_item_classes') 
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <section
     class="<?= $escaper->escapeHtmlAttr($sliderSectionClasses) ?>"
     x-data="initSliderComponent()"
