--- a/Magento_Catalog/templates/product/slider/product-slider.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider.phtml
@@ -206,4 +206,5 @@ if (empty($sliderHtml)) {
             }
         });
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 </div>
