--- a/Magento_Catalog/templates/product/view/quantity.phtml
+++ b/Magento_Catalog/templates/product/view/quantity.phtml
@@ -84,6 +84,7 @@ $maxSalesQtyLength = ($maxSalesQty ? strlen((string) $maxSalesQty) : 4)
             };
         }
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
     <div x-data="initQtyField()"
         x-init="$dispatch('update-qty-<?= (int)$product->getId() ?>', qty)"
     >
