--- a/Magento_Catalog/templates/product/widget/viewed/js/recently-viewed-products.phtml
+++ b/Magento_Catalog/templates/product/widget/viewed/js/recently-viewed-products.phtml
@@ -293,3 +293,5 @@ $viewModelCurrency = $viewModels->require(Currency::class);
     }
 
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
+
