--- a/Magento_Catalog/templates/product/widget/viewed/js/register-viewed-product.phtml
+++ b/Magento_Catalog/templates/product/widget/viewed/js/register-viewed-product.phtml
@@ -140,3 +140,4 @@ if (! $recentlyViewed->isRecentlyViewedProductsEnabled()) {
         addCurrentProductToRecentlyViewed()
     })()
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
