--- a/Magento_Checkout/templates/php-cart/coupon.phtml
+++ b/Magento_Checkout/templates/php-cart/coupon.phtml
@@ -51,6 +51,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <div class="coupon-form pt-6"
      x-data="initCouponForm()"
 >
