--- a/Magento_Checkout/templates/php-cart/form.phtml
+++ b/Magento_Checkout/templates/php-cart/form.phtml
@@ -93,6 +93,7 @@ $cartItemOutputViewModel = $viewModels->require(ItemOutput::class);
                 );
             }
         </script>
+        <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
             <div x-data="initClearShoppingCartModal()">
                 <?= /** @noEscape */ ($confirmation = $modalViewModel
                     ->confirm(__('Are you sure?'))
