--- a/Magento_Checkout/templates/php-cart/shipping.phtml
+++ b/Magento_Checkout/templates/php-cart/shipping.phtml
@@ -341,6 +341,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <div id="block-shipping"
      class="flex flex-col pb-2 my-2 border-b-2 border-gray-300 estimate-shipping-form"
      x-data="initShippingEstimation()"
