--- a/Magento_ConfigurableProduct/templates/product/price/tier_price.phtml
+++ b/Magento_ConfigurableProduct/templates/product/price/tier_price.phtml
@@ -73,6 +73,7 @@ $productViewModel = $viewModels->require(ProductPage::class);
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <div
      x-data="initTierPrices<?= (int)$product->getId() ?>()"
      x-bind="eventListeners"
