--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -368,3 +368,5 @@ $currentProduct = $viewModels->require(CurrentProduct::class);
     }
 
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
+
