--- a/Magento_Customer/templates/form/edit.phtml
+++ b/Magento_Customer/templates/form/edit.phtml
@@ -293,3 +293,5 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
+
