--- a/Magento_GoogleGtag/templates/ga.phtml
+++ b/Magento_GoogleGtag/templates/ga.phtml
@@ -100,5 +100,6 @@ $analyticsData = $block->getAnalyticsData();
             }
         }())
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
     <!-- END GOOGLE ANALYTICS 4 CODE -->
 <?php endif; ?>
