--- a/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
+++ b/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
@@ -44,6 +44,7 @@ if (!$shoppingAssistanceViewModel->isLoginAsCustomerEnabled()) {
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <div class="field choice"
      x-data="initAllowShippingAssistence()"
 >
