--- a/Magento_LoginAsCustomerFrontendUi/templates/html/notices.phtml
+++ b/Magento_LoginAsCustomerFrontendUi/templates/html/notices.phtml
@@ -83,3 +83,4 @@ if (!$configurationViewModel->isEnabled()) {
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
