--- a/Magento_LoginAsCustomerFrontendUi/templates/login.phtml
+++ b/Magento_LoginAsCustomerFrontendUi/templates/login.phtml
@@ -42,3 +42,4 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     });
 
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
