--- a/Magento_PageBuilder/templates/widgets/map.phtml
+++ b/Magento_PageBuilder/templates/widgets/map.phtml
@@ -161,3 +161,4 @@ $googleMapsApi = $viewModels->require(GoogleMapsApi::class);
         });
     })();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
