--- a/Magento_PageBuilder/templates/widgets/parallax.phtml
+++ b/Magento_PageBuilder/templates/widgets/parallax.phtml
@@ -131,3 +131,4 @@ $jarallaxVideoUrl = $block->getViewFileUrl('Magento_PageBuilder::js/jarallax-vid
         });
     })();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
