--- a/Magento_PageBuilder/templates/widgets/tabs.phtml
+++ b/Magento_PageBuilder/templates/widgets/tabs.phtml
@@ -39,3 +39,5 @@ use Magento\Framework\View\Element\Template;
         });
     })();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
+
