--- a/Magento_Paypal/templates/express/in-context/shortcut/button.phtml
+++ b/Magento_Paypal/templates/express/in-context/shortcut/button.phtml
@@ -188,3 +188,4 @@ $renderTargetElementId = sprintf('paypalInContextRenderTarget%d', $isMinicart)
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
