--- a/Magento_Paypal/templates/express/shortcut_button.phtml
+++ b/Magento_Paypal/templates/express/shortcut_button.phtml
@@ -193,3 +193,4 @@ $clientConfig = json_encode($widgetData['Magento_Paypal/js/in-context/product-ex
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
