--- a/Magento_ReCaptchaFrontendUi/templates/js/script_loader.phtml
+++ b/Magento_ReCaptchaFrontendUi/templates/js/script_loader.phtml
@@ -72,3 +72,4 @@ if (!$siteKeyV2checkbox && !$siteKeyV2invisible && !$siteKeyV3) {
     }());
 
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
