--- a/Magento_ReCaptchaFrontendUi/templates/js/script_token_recaptcha.phtml
+++ b/Magento_ReCaptchaFrontendUi/templates/js/script_token_recaptcha.phtml
@@ -48,4 +48,5 @@ $fieldName = $recaptcha->getResultTokenFieldName($formId);
 
     <?php if ($block->getData('render_script_tag')): ?>
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php endif; ?>
