--- a/Magento_ReCaptchaFrontendUi/templates/recaptcha_invisible.phtml
+++ b/Magento_ReCaptchaFrontendUi/templates/recaptcha_invisible.phtml
@@ -66,3 +66,4 @@ $grecaptchaInstanceId  = "grecaptchaInstance$instanceSuffix";
         }
     })();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
