--- a/Magento_Review/templates/customer/list.phtml
+++ b/Magento_Review/templates/customer/list.phtml
@@ -245,3 +245,4 @@ $ratingSteps = 5;
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
