--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -363,6 +363,7 @@ mutation createProductReviewMutation(
                     }
                 }
             </script>
+            <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
         <?php else: ?>
             <div
                 id="review-form"
