--- a/Magento_Review/templates/helper/summary.phtml
+++ b/Magento_Review/templates/helper/summary.phtml
@@ -164,4 +164,5 @@ $uniqueId = $productId . uniqid();
             }
         }
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php endif; ?>
