--- a/Magento_Swatches/templates/product/js/swatch-options.phtml
+++ b/Magento_Swatches/templates/product/js/swatch-options.phtml
@@ -169,3 +169,4 @@ use Magento\Framework\View\Element\Template;
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
