--- a/Magento_Theme/templates/html/header/menu/mobile.phtml
+++ b/Magento_Theme/templates/html/header/menu/mobile.phtml
@@ -230,3 +230,4 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
