--- a/Magento_Theme/templates/html/mobile-safari-bug-workaround.phtml
+++ b/Magento_Theme/templates/html/mobile-safari-bug-workaround.phtml
@@ -28,3 +28,4 @@ use Magento\Framework\View\Element\Template;
 <script>
     document.body.addEventListener('touchstart', () => {}, {passive: true})
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
