--- a/Magento_Theme/templates/html/print.phtml
+++ b/Magento_Theme/templates/html/print.phtml
@@ -13,3 +13,4 @@ declare(strict_types=1);
 <script>
     window.print();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
