--- a/Magento_Wishlist/templates/view.phtml
+++ b/Magento_Wishlist/templates/view.phtml
@@ -86,4 +86,5 @@ $wishlistHelper = $this->helper(WishlistHelper::class);
             }
         }
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php endif ?>
