--- a/Magento_Catalog/templates/product/list/js/price-box.phtml
+++ b/Magento_Catalog/templates/product/list/js/price-box.phtml
@@ -35,3 +35,4 @@ use Magento\Framework\View\Element\Template;
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
