--- a/Magento_Catalog/templates/product/view/addtowishlist.phtml
+++ b/Magento_Catalog/templates/product/view/addtowishlist.phtml
@@ -133,7 +133,7 @@ $uniqueId = '_' . uniqid();
         }
     }
 </script>
-
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <button x-data="initWishlist<?= /** @noEscape */ $uniqueId ?>()"
         x-defer="intersect"
         @click.prevent="addToWishlist(<?= (int)$product->getId() ?>)"
