--- a/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/Magento_Catalog/templates/product/view/gallery.phtml
@@ -564,3 +564,4 @@ $productName = $block->getProduct()->getName();
         }
      }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
