--- a/Magento_Catalog/templates/product/view/options/type/date.phtml
+++ b/Magento_Catalog/templates/product/view/options/type/date.phtml
@@ -132,5 +132,6 @@ $htmlInputTypes = [
                }
             }
         </script>
+        <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
     </div>
 </div>
