--- a/Magento_Catalog/templates/product/view/price.phtml
+++ b/Magento_Catalog/templates/product/view/price.phtml
@@ -242,6 +242,7 @@ if ($msrpPrice = iterator_to_array($product->getPriceInfo()->getPrices())[MsrpPr
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <div x-data="initPrice<?= (int)$product->getId() ?>()"
      x-bind="eventListeners"
      class="price-box price-final_price"
