--- a/Magento_Contact/templates/form.phtml
+++ b/Magento_Contact/templates/form.phtml
@@ -128,6 +128,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
             }
         }
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
     <div class="card lg:w-1/2 md:w-1/3">
         <?= $block->getChildHtml('contact.details') ?>
     </div>
