--- a/Magento_Customer/templates/address/grid.phtml
+++ b/Magento_Customer/templates/address/grid.phtml
@@ -110,6 +110,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                 }
             }
         </script>
+        <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
     </div>
 </div>
 
