--- a/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/Magento_Customer/templates/form/forgotpassword.phtml
@@ -95,5 +95,6 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 }
             }
         </script>
+        <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
     </div>
 </div>
