--- a/Magento_Customer/templates/form/register.phtml
+++ b/Magento_Customer/templates/form/register.phtml
@@ -578,4 +578,5 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
             });
         })
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 </div>
