--- a/Magento_Customer/templates/js/password-validation.phtml
+++ b/Magento_Customer/templates/js/password-validation.phtml
@@ -146,3 +146,4 @@ use Magento\Framework\View\Element\Template;
     })();
 
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
