--- a/Magento_GoogleAnalytics/templates/ga.phtml
+++ b/Magento_GoogleAnalytics/templates/ga.phtml
@@ -103,3 +103,4 @@ if (empty($accountId)) return;
     window.addEventListener("load", new GoogleAnalytics().initGoogleAnalytics);
 
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
