--- a/Magento_PageBuilder/templates/widgets/buttons.phtml
+++ b/Magento_PageBuilder/templates/widgets/buttons.phtml
@@ -40,3 +40,4 @@ use Magento\Framework\View\Element\Template;
         });
     })();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
