--- a/Magento_PageBuilder/templates/widgets/show-on-hover.phtml
+++ b/Magento_PageBuilder/templates/widgets/show-on-hover.phtml
@@ -57,3 +57,4 @@ use Magento\Framework\View\Element\Template;
         });
     })();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
