--- a/Magento_Paypal/templates/express/shortcut.phtml
+++ b/Magento_Paypal/templates/express/shortcut.phtml
@@ -78,3 +78,4 @@ $isInCatalogProduct = (bool) $block->getIsInCatalogProduct();
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
