--- a/Magento_ReCaptchaFrontendUi/templates/js/script_token_invisible.phtml
+++ b/Magento_ReCaptchaFrontendUi/templates/js/script_token_invisible.phtml
@@ -58,4 +58,5 @@ $grecaptchaInstanceId = "grecaptchaInstance$instanceSuffix";
 
     <?php if ($block->getData('render_script_tag')): ?>
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php endif; ?>
