--- a/Magento_ReCaptchaFrontendUi/templates/recaptcha_checkbox.phtml
+++ b/Magento_ReCaptchaFrontendUi/templates/recaptcha_checkbox.phtml
@@ -68,3 +68,4 @@ $grecaptchaContainerId = "grecaptcha-container-$instanceSuffix";
         }
     })();
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
