--- a/Magento_Review/templates/helper/summary_short.phtml
+++ b/Magento_Review/templates/helper/summary_short.phtml
@@ -154,4 +154,5 @@ $uniqueId = $productId . uniqid();
             }
         }
     </script>
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <?php endif; ?>
