--- a/Magento_Swatches/templates/product/listing/renderer.phtml
+++ b/Magento_Swatches/templates/product/listing/renderer.phtml
@@ -162,7 +162,7 @@ $swatchItemBlock->setData('product_id', $productId);
         }
 
     </script>
-
+    <?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
 <div x-data="initConfigurableSwatchOptions_<?= (int) $productId ?>()"
      x-defer="intersect"
      x-init="findAllowedAttributeOptions(); initShowSwatchesIntersect();"
