--- a/Magento_Theme/templates/html/collapsible.phtml
+++ b/Magento_Theme/templates/html/collapsible.phtml
@@ -81,3 +81,4 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
         }
     }
 </script>
+<?php $viewModels->require(\Hyva\Theme\ViewModel\InlineScript::class)->registerWithCsp() ?>
