#1052 fix: remove untranslated SVG title elements and add aria-hidden attribute for A11Y
      - This removes the <title> elements from SVG icons in links, which were not translatable
      - Added `aria-hidden="true"` attribute to SVG icons to improve screen reader behavior
      - Ensured translatable title attributes on <a> tags are used for accessibility

--- a/Magento_Catalog/templates/product/list/toolbar/sorter.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/sorter.phtml
@@ -44,7 +44,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
            class="action sorter-action sort-desc"
            @click.prevent="sortAscending"
         >
-            <?= $heroicons->sortAscendingHtml(); ?>
+            <?= $heroicons->sortAscendingHtml('', 24, 24, ['aria-hidden' => true]); ?>
         </a>
     <?php else: ?>
         <a title="<?= $escaper->escapeHtmlAttr(__('Set Descending Direction')) ?>"
@@ -52,7 +52,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
            class="action sorter-action sort-asc"
            @click.prevent="sortDescending"
         >
-            <?= $heroicons->sortDescendingHtml(); ?>
+            <?= $heroicons->sortDescendingHtml('', 24, 24, ['aria-hidden' => true]); ?>
         </a>
     <?php endif; ?>
 </div>
