--- a/Magento_Bundle/templates/product/price/tier_prices.phtml
+++ b/Magento_Bundle/templates/product/price/tier_prices.phtml
@@ -20,7 +20,7 @@ $tierPriceModel = $block->getPrice();
 $tierPrices = $tierPriceModel->getTierPriceList();
 ?>
 <?php if (count($tierPrices)): ?>
-    <ul class="<?= $escaper
+    <ul role="list" class="<?= $escaper
         ->escapeHtmlAttr(($block->hasListClass() ? $block->getListClass() : 'prices-tier items')) ?>"
     >
         <?php foreach ($tierPrices as $index => $price): ?>
